# qibo-cloud-backends

./: .gitignore  .pre-commit-config.yaml  README.md  flake.nix  pyproject.toml  requirements-aws.txt
.github/worflows/: deploy.yml  docs.yml
.github/workflows/: #unit_test.yml#  .#deploy.yml  .#unit_test.yml  deploy.yml  docs.yml  unit_test.yml
doc/source/: backends.rst  conf.py  index.rst  tutorials.rst
doc/source/api-reference/: backends.rst  backends.rst~  index.rst  index.rst~
notebooks/: Qibo-AWS_RunningZNE_20240509.ipynb  Qibo-AWS_RunningZNE_20240523.ipynb
src/: __init__.py
src/backends/: qiskit_client.py
src/qibo_cloud_backends/: .#__init__.py  __init__.py  aws_client.py  braket_client.py  braket_translation.py  ionq_client.py  nexus_auth.py  nexus_client.py  nexus_config.py  nexus_errors.py  nexus_results.py  nexus_translation.py  nqpi_ions_client.py  qibo_client.py  qiskit_client.py  translate.py
src/qibo_cloud_backends/backends/: __init__.py  __init__.py~  qibo_client.py  qiskit_client.py
tests/: #test_backends.py#  test_aws.py  test_backends.py  test_braket.py
